🎨 Fixes contrast issue

--- a/main.scss
+++ b/main.scss
@@ -17,7 +17,7 @@ $spacing-unit:	 30px;
 	--background-color: #fdfdfd;
 	--brand-color: #2a7ae2;
 	--brand-color-dark: #1c67ca;
-	--grey-color: #828282;
+	--grey-color: #575757;
 	--grey-color-light: #b5b5b5;
 	--grey-color-dark: #636363;
 }
